--- a/src/main/resources/templates/discussions/discussion-details.html
+++ b/src/main/resources/templates/discussions/discussion-details.html
@@ -92,6 +92,15 @@
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
 <!-- Scripts -->
-<div th:replace="fragments/common-scripts :: common-scripts"></div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.js" type="text/javascript"></script>
+<script>
+    $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 </body>
 </html>
