--- a/src/main/resources/templates/forget-password.html
+++ b/src/main/resources/templates/forget-password.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="fragments/common-header :: common-header"></div>
 <head>
     <title>Forget Password-MHSN</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-<!--TODO: Have to fix it-->
 <!-- Navbar -->
 
 <div th:replace="fragments/navbar :: navbar"></div>
@@ -18,33 +19,55 @@
     <div class="container">
         <div class="pt-3">
             <h1>User password change</h1>
-            <form method="POST" th:action="@{/forget-password}">
-
-                <!-- Question for forget Password -->
+            <form method="POST" th:action="@{/forgotten-password-change}">
                 <div class="form-group">
-                    <label for="question1">First Question </label>
-                    <input class="form-control" id="question1" name="question1"
-                           placeholder="Enter the first question you want to set for forger password" required
-                           type="question1">
+                    <label for="email">Email</label>
+                    <input class="form-control" id="email" name="email" placeholder="Enter your email address"
+                           required type="email">
                 </div>
                 <div class="form-group">
-                    <label for="answer1">Answer For First Question </label>
-                    <input class="form-control" id="answer1" name="answer1"
-                           placeholder="Enter the first answer you set for forger password" required type="answer1">
+                    <label for="dateOfBirth">Date Of Birth</label>
+                    <input class="form-control" id="dateOfBirth" name="dateOfBirth"
+                           required type="date">
                 </div>
+                <!-- Mobile Number -->
                 <div class="form-group">
-                    <label for="question2">Second Question </label>
-                    <input class="form-control" id="question2" name="question2"
-                           placeholder="Enter the second question you want to set for forger password" required
-                           type="question1">
-                </div>
-                <div class="form-group">
-                    <label for="answer2">Answer For Second Question</label>
-                    <input class="form-control" id="answer2" name="answer2"
-                           placeholder="Enter the second answer you set for forger password" required type="answer2">
+                    <label for="mobileNo">Mobile Number</label>
+                    <input class="form-control" id="mobileNo" name="mobileNo"
+                           placeholder="Enter your mobile number" required type="text">
                 </div>
 
+                <div class="form-group">
+                    <label for="nidNo">NID Number</label>
+                    <input class="form-control" id="nidNo" name="nidNo"
+                           placeholder="Enter your NID number" required type="text">
+                </div>
 
+                <div class="form-group">
+                    <label for="passwordForgetQuestionNo">Password Forgetting Question</label>
+                    <select class="form-control" id="passwordForgetQuestionNo" name="passwordForgetQuestionNo"
+                            required>
+                        <option value="1">What is Your Favourite
+                            Flower?
+                        </option>
+                        <option value="2">What is Your Favourite
+                            Place?
+                        </option>
+                        <option value="3">What is Your Favourite
+                            Movie Name?
+                        </option>
+                        <option value="4">What is your hobby?
+                        </option>
+                        <option value="5">Your own secret
+                            question only known by you.
+                        </option>
+                    </select>
+                    <div class="form-group">
+                        <label for="answer">Answer to your password forgetting question</label>
+                        <input class="form-control" id="answer" name="answer"
+                               placeholder="Enter your secret answer" required type="text">
+                    </div>
+                </div>
                 <!-- Password -->
                 <div class="form-group">
                     <label for="newPassword">New Password (At least 6 characters)</label>
@@ -54,24 +77,39 @@
                 <div class="form-group">
                     <!-- Confirm Password -->
                     <label for="confirmPassword">Confirm Password (At least 6 characters)</label>
-                    <input class="form-control" id="confirmPassword" pattern=".{6,}" placeholder="Confirm your new password"
+                    <input class="form-control" id="confirmPassword" pattern=".{6,}"
+                           placeholder="Confirm your new password"
                            required type="password">
                     <span class="text-danger" id="passwordError"></span>
                 </div>
                 <button class="btn btn-primary" type="submit">Update</button>
             </form>
-
-
         </div>
     </div>
-    <!--  Toast-->
-    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+    <!-- Bootstrap Toast for displaying error message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
          th:if="${error}">
         <div class="toast-header bg-dark">
             <strong class="mr-auto text-white">Error</strong>
-            <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
         <div class="toast-body bg-danger text-white" th:text="${error}"></div>
+    </div>
+
+    <!-- Bootstrap Toast for displaying success message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
+         th:if="${success}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Success</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-success text-white" th:text="${success}"></div>
     </div>
 
 </main>
@@ -79,7 +117,14 @@
 <div th:replace="fragments/footer :: footer"></div>
 
 <!-- Scripts -->
-<div th:replace="fragments/common-scripts :: common-scripts"></div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+    $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 <script>
     $(document).ready(function () {
         // Script to activate Bootstrap Toast
