--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="fragments/common-header :: common-header"></div>
 
 <head>
     <title>Homepage-MHSN</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 <!-- Navbar -->
@@ -46,30 +48,32 @@
                 podcasts, and videos.</p>
         </div>
     </div>
-    <!-- Bootstrap Toast for displaying success -->
-    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
+    <!-- Bootstrap Toast for displaying success message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
          th:if="${success}">
         <div class="toast-header bg-dark">
             <strong class="mr-auto text-white">Success</strong>
-            <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
         <div class="toast-body bg-success text-white" th:text="${success}"></div>
     </div>
 </main>
+
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
-<div th:replace="fragments/common-scripts :: common-scripts"></div>
 
-<!-- Script to activate Bootstrap Toast -->
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
     $(document).ready(function () {
         $('.toast').toast({
             autohide: true,
-            delay: 5000, // 5 seconds
-            animation: true,
-            position: 'top-end'
+            delay: 5000 // 5 seconds
         }).toast('show');
     });
 </script>
-</body>
-</html>
