--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="fragments/common-header :: common-header"></div>
 <head>
-  <title>Change Password-MHSN</title>
+    <title>Change Password-MHSN</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -14,80 +16,105 @@
 <div th:replace="fragments/sidebar :: sidebar"></div>
 
 <!-- Main content area -->
-<main role="main" class="main-content">
-  <div class="container">
-    <div class="pt-3">
-      <h1>User password change</h1>
-      <form th:action="@{/password-change}" method="POST">
+<main class="main-content" role="main">
+    <div class="container">
+        <div class="pt-3">
+            <h1>User password change</h1>
+            <form method="POST" th:action="@{/password-change}">
 
-        <!-- Old password Password -->
-        <div class="form-group">
-          <label for="oldPassword">Old Password </label>
-          <input class="form-control" id="oldPassword" name = "oldPassword" placeholder="Enter your old password" required type="password" pattern=".{6,}">
+                <!-- Old password Password -->
+                <div class="form-group">
+                    <label for="oldPassword">Old Password </label>
+                    <input class="form-control" id="oldPassword" name="oldPassword"
+                           pattern=".{6,}" placeholder="Enter your old password" required type="password">
+                </div>
+                <!-- Password -->
+                <div class="form-group">
+                    <label for="newPassword">New Password (At least 6 characters)</label>
+                    <input class="form-control" id="newPassword" name="newPassword"
+                           pattern=".{6,}" placeholder="Enter your new password" required type="password">
+                </div>
+                <div class="form-group">
+                    <!-- Confirm Password -->
+                    <label for="confirmPassword">Confirm Password (At least 6 characters)</label>
+                    <input class="form-control" id="confirmPassword" pattern=".{6,}"
+                           placeholder="Confirm your new password"
+                           required type="password">
+                    <span class="text-danger" id="passwordError"></span>
+                </div>
+                <button class="btn btn-primary" type="submit">Update</button>
+            </form>
         </div>
-        <!-- Password -->
-        <div class="form-group">
-          <label for="newPassword">New Password (At least 6 characters)</label>
-          <input class="form-control" id="newPassword" name = "newPassword" placeholder="Enter your new password" required type="password" pattern=".{6,}">
-        </div>
-        <div class="form-group">
-          <!-- Confirm Password -->
-          <label for="confirmPassword">Confirm Password  (At least 6 characters)</label>
-          <input class="form-control" id="confirmPassword" placeholder="Confirm your new password" required type="password" pattern=".{6,}">
-          <span id="passwordError" class="text-danger"></span>
-        </div>
-        <button type="submit" class="btn btn-primary">Update</button>
-      </form>
-
-
     </div>
-  </div>
-  <!--  Toast-->
-  <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;" th:if="${error}">
-    <div class="toast-header bg-dark">
-      <strong class="mr-auto text-white">Error</strong>
-      <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+    <!-- Bootstrap Toast for displaying error message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${error}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Error</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-danger text-white" th:text="${error}"></div>
     </div>
-    <div class="toast-body bg-danger text-white" th:text="${error}"></div>
-  </div>
 
+    <!-- Bootstrap Toast for displaying success message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
+         th:if="${success}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Success</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-success text-white" th:text="${success}"></div>
+    </div>
 </main>
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
 
 <!-- Scripts -->
-<div th:replace="fragments/common-scripts :: common-scripts"></div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
-  $(document).ready(function () {
-      // Script to activate Bootstrap Toast
-      $('.toast').toast({
-          autohide: true,
-          delay: 5000, // 5 seconds
-          animation: true,
-          position: 'top-end'
-      }).toast('show');
+    $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
+<script>
+    $(document).ready(function () {
+        // Script to activate Bootstrap Toast
+        $('.toast').toast({
+            autohide: true,
+            delay: 5000, // 5 seconds
+            animation: true,
+            position: 'top-end'
+        }).toast('show');
 
-      // Add an event listener to the form on submission
-      $("form").submit(function (event) {
-          // Get the values of the password and confirmPassword fields
-          var newPassword = $("#newPassword").val();
-          var confirmPassword = $("#confirmPassword").val();
+        // Add an event listener to the form on submission
+        $("form").submit(function (event) {
+            // Get the values of the password and confirmPassword fields
+            var newPassword = $("#newPassword").val();
+            var confirmPassword = $("#confirmPassword").val();
 
-          // Check if the passwords match and are at least 6 characters long
-          if (newPassword !== confirmPassword) {
-              // Display an error message
-              $("#passwordError").text("Passwords do not match");
-              event.preventDefault(); // Prevent form submission
-          } else if (oldPassword.length < 6 || newPassword.length < 6 || confirmPassword.length < 6 ) {
-              // Display an error message
-              $("#passwordError").text("Password must be at least 6 characters");
-              event.preventDefault(); // Prevent form submission
-          } else {
-              // Clear any previous error messages
-              $("#passwordError").text("");
-          }
-      });
-  });
+            // Check if the passwords match and are at least 6 characters long
+            if (newPassword !== confirmPassword) {
+                // Display an error message
+                $("#passwordError").text("Passwords do not match");
+                event.preventDefault(); // Prevent form submission
+            } else if (oldPassword.length < 6 || newPassword.length < 6 || confirmPassword.length < 6 ) {
+                // Display an error message
+                $("#passwordError").text("Password must be at least 6 characters");
+                event.preventDefault(); // Prevent form submission
+            } else {
+                // Clear any previous error messages
+                $("#passwordError").text("");
+            }
+        });
+    });
 </script>
 
 </body>
