therapist update done. tables need to be modified

--- a/src/main/resources/templates/profiles/update-profile.html
+++ b/src/main/resources/templates/profiles/update-profile.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="passwordForgetQuestionNo">Password Forget Question</label>
+                    <label for="passwordForgetQuestionNo">Password Forgetting Question</label>
                     <select class="form-control" id="passwordForgetQuestionNo" required
                             th:field="*{passwordForgetQuestionNo}">
                         <option th:selected="*{passwordForgetQuestionNo} == '1'" th:value="1">What is Your Favourite
