--- a/src/main/resources/templates/therapists/add-therapist.html
+++ b/src/main/resources/templates/therapists/add-therapist.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="fragments/common-header :: common-header"></div>
 
 <head>
     <title>Add Therapist-MHSN</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -36,42 +38,37 @@
                 </div>
                 <!-- Fathers name -->
                 <div class="form-group">
-                    <label for="fatherName">Father name</label>
-                    <input class="form-control" id="fatherName" placeholder="Enter therapist's father name" required
+                    <label for="fatherName">Father's Name</label>
+                    <input class="form-control" id="fatherName" placeholder="Enter therapist's father's name" required
                            th:field="*{fatherName}" type="text">
                 </div>
                 <!-- mothers name -->
                 <div class="form-group">
-                    <label for="motherName">Mother name</label>
-                    <input class="form-control" id="motherName" placeholder="Enter therapist's mother name" required
+                    <label for="motherName">Mother's Name</label>
+                    <input class="form-control" id="motherName" placeholder="Enter therapist's mother's name" required
                            th:field="*{motherName}" type="text">
                 </div>
-                <!-- Age & Mobile Number -->
-                <!-- Age -->
                 <div class="form-group">
-                    <label for="dateOfBirth">Date Of Birth</label>
-                    <input class="form-control" id="dateOfBirth" placeholder="Enter therapist's DOB" required
-                           th:field="*{dateOfBirth}" type="text">
+                    <label for="dateOfBirth">Date of Birth</label>
+                    <input class="form-control" id="dateOfBirth" required
+                           th:field="*{dateOfBirth}"
+                           type="date">
                 </div>
-
                 <div class="form-group">
                     <label for="age">Age</label>
                     <input class="form-control" id="age" placeholder="Enter therapist's age" required th:field="*{age}"
                            type="number">
                 </div>
                 <div class="form-group">
+                    <label for="mobileNo">Mobile Number</label>
+                    <input class="form-control" id="mobileNo" placeholder="Enter therapist's mobile number"
+                           required th:field="*{mobileNo}" type="text">
+                </div>
+                <div class="form-group">
                     <label for="nidNo">NID Number</label>
                     <input class="form-control" id="nidNo" placeholder="Enter therapist's NID number"
                            required th:field="*{nidNo}" type="text">
                 </div>
-                <!-- Mobile Number -->
-                <div class="form-group">
-                    <label for="mobileNo">Mobile Number</label>
-                    <input class="form-control" id="mobileNo" placeholder="Enter therapist's mobile number" required
-                           th:field="*{mobileNo}" type="text">
-                </div>
-
-                <!-- Gender -->
                 <div class="form-group">
                     <label for="gender">Select therapist's gender</label>
                     <select class="form-control" id="gender" required th:field="*{gender}">
@@ -83,11 +80,11 @@
                 <div class="form-group">
                     <label for="religion">Select Religion</label>
                     <select class="form-control" id="religion" required th:field="*{religion}">
-                        <option th:value="Muslim">Muslim</option>
-                        <option th:value="Hindu">Hindu</option>
-                        <option th:value="Buddhist">Buddhist</option>
-                        <option th:value="Christian">Christian</option>
-                        <option th:value="Christian">Other</option>
+                        <option th:value="Islam">Islam</option>
+                        <option th:value="Hinduism">Hinduism</option>
+                        <option th:value="Buddhism">Buddhism</option>
+                        <option th:value="Christianity">Christianity</option>
+                        <option th:value="Other">Other</option>
                     </select>
                 </div>
                 <!-- Address -->
@@ -110,30 +107,69 @@
                     <span class="text-danger" id="passwordError"></span>
                 </div>
 
+                <!-- question and answer for reset Password -->
+                <div class="form-group">
+                    <label for="passwordForgetQuestionNo">Therapist's Password Forgetting Question</label>
+                    <select class="form-control" id="passwordForgetQuestionNo" required
+                            th:field="*{passwordForgetQuestionNo}">
+                        <option th:value="1">Favourite
+                            Flower?
+                        </option>
+                        <option th:value="2">Favourite
+                            Place?
+                        </option>
+                        <option th:value="3">Favourite
+                            Movie Name?
+                        </option>
+                        <option th:value="4">Hobby?
+                        </option>
+                        <option th:value="5">Secret
+                            question.
+                        </option>
+                    </select>
+                    <div class="form-group">
+                        <label for="answer">Answer to therapist's password forgetting question</label>
+                        <input class="form-control" id="answer" placeholder="Enter secret answer"
+                               required th:field="*{answer}" type="text">
+                    </div>
+                </div>
                 <button class="btn btn-primary" type="submit">Add Therapist</button>
             </form>
         </div>
     </div>
-    <!--  Toast-->
-    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+    <!-- Bootstrap Toast for displaying error message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
          th:if="${error}">
         <div class="toast-header bg-dark">
             <strong class="mr-auto text-white">Error</strong>
-            <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
         <div class="toast-body bg-danger text-white" th:text="${error}"></div>
+    </div>
+
+    <!-- Bootstrap Toast for displaying success message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
+         th:if="${success}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Success</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-success text-white" th:text="${success}"></div>
     </div>
 </main>
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
 
 <!-- Scripts -->
-<!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.js" type="text/javascript"></script>
 <script>
     $(function () {
     $('[data-toggle="tooltip"]').tooltip()
