--- a/src/main/resources/templates/therapists/therapist-list.html
+++ b/src/main/resources/templates/therapists/therapist-list.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="fragments/common-header :: common-header"></div>
 
 <head>
     <title>Therapists-MHSN</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -28,9 +30,9 @@
                     <tr>
                         <th class="text-center">Name</th>
                         <th class="text-center">Email</th>
-                        <th class="text-center">Fathers Name</th>
-                        <th class="text-center">Mothers Name</th>
-                        <th class="text-center">Date of Birth</th>
+                        <th class="text-center">Father</th>
+                        <th class="text-center">Mother</th>
+                        <th class="text-center">Birth Date</th>
                         <th class="text-center">Age</th>
                         <th class="text-center">NID No</th>
                         <th class="text-center">Mobile</th>
@@ -64,7 +66,9 @@
                                     <i class="fas fa-edit"></i>
                                 </a>
                             </span>
+                            <hr>
                             <span th:if="${isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin}">
+<!--                                TODO: Reference Child Delete-->
                                 <a class="btn btn-danger" role="button"
                                    th:href="@{/therapist-delete(id=${therapist.id})}">
                                     <i class="fas fa-trash-alt"></i>
@@ -82,12 +86,28 @@
             <a class="mt-3" th:href="@{/}">Back to Home</a>
         </div>
     </div>
-    <!--  Toast-->
-    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+    <!-- Bootstrap Toast for displaying error message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${error}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Error</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-danger text-white" th:text="${error}"></div>
+    </div>
+
+    <!-- Bootstrap Toast for displaying success message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
          th:if="${success}">
         <div class="toast-header bg-dark">
             <strong class="mr-auto text-white">Success</strong>
-            <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
         <div class="toast-body bg-success text-white" th:text="${success}"></div>
     </div>
@@ -97,46 +117,14 @@
 <div th:replace="fragments/footer :: footer"></div>
 
 <!-- Scripts -->
-<!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.js" type="text/javascript"></script>
-<script>
-    $(function () {
-    $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
-
-
-<script>
-    $(document).ready(function() {
-        $("#table").DataTable({
-            'aoColumnDefs': [{
-                'bSortable': true, // Enable sorting for all columns
-                'aTargets': '_all', // Target all columns
-            }],
-            'order': [], // Disable initial sorting
-            'orderCellsTop': true, // Show sorting icons in the header cells
-            'language': {
-                'paginate': {
-                    'next': '<i class="fas fa-chevron-right"></i>', // Next page icon
-                    'previous': '<i class="fas fa-chevron-left"></i>' // Previous page icon
-                }
-            }
-        });
-    });
-</script>
 <script>
     $(document).ready(function () {
         $('.toast').toast({
             autohide: true,
-            delay: 5000,. // 5 seconds
-            animation: true,
-            position: 'top-end'
+            delay: 5000 // 5 seconds
         }).toast('show');
     });
 </script>
-</body>
-</html>
