--- a/src/main/resources/templates/therapists/update-therapist.html
+++ b/src/main/resources/templates/therapists/update-therapist.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="fragments/common-header :: common-header"></div>
 
 <head>
     <title>Update Therapist-MHSN</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -33,22 +35,22 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="fatherName">Father's name</label>
+                    <label for="fatherName">Father's Name</label>
                     <input class="form-control" id="fatherName" placeholder="Enter therapist's father's name" required
                            th:field="*{fatherName}" type="text">
                 </div>
 
                 <div class="form-group">
-                    <label for="motherName">mother's Name</label>
+                    <label for="motherName">Mother's Name</label>
                     <input class="form-control" id="motherName" placeholder="Enter therapist's mother's Name" required
                            th:field="*{motherName}" type="text">
                 </div>
 
                 <div class="form-group">
                     <label for="dateOfBirth">Age</label>
-                    <input class="form-control" id="dateOfBirth" placeholder="Enter therapist's date Of birth" required
-                           th:field="*{age}"
-                           type="text">
+                    <input class="form-control" id="dateOfBirth" required
+                           th:field="*{dateOfBirth}"
+                           type="date">
                 </div>
 
                 <div class="form-group">
@@ -58,15 +60,36 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="mobileNo">Mobile Number</label>
+                    <input class="form-control" id="mobileNo" placeholder="Enter therapist's mobile number" required
+                           th:field="*{mobileNo}" type="text">
+                </div>
+
+                <div class="form-group">
                     <label for="nidNo">NID Number</label>
                     <input class="form-control" id="nidNo" placeholder="Enter therapist's NID number" required
                            th:field="*{nidNo}" type="text">
                 </div>
 
                 <div class="form-group">
-                    <label for="mobileNo">Mobile Number</label>
-                    <input class="form-control" id="mobileNo" placeholder="Enter therapist's mobile number" required
-                           th:field="*{mobileNo}" type="text">
+                    <label for="gender">Select therapist's gender</label>
+                    <select class="form-control" id="gender" required th:field="*{gender}">
+                        <option th:selected="*{gender} == 'Male'" th:value="Male">Male</option>
+                        <option th:selected="*{gender} == 'Female'" th:value="Female">Female</option>
+                        <option th:selected="*{gender} == 'Other'" th:value="Other">Other</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="religion">Select therapist's religion</label>
+                    <select class="form-control" id="religion" required th:field="*{religion}">
+                        <option th:selected="*{religion} == 'Islam'" th:value="Islam">Islam</option>
+                        <option th:selected="*{religion} == 'Hinduism'" th:value="Hinduism">Hinduism</option>
+                        <option th:selected="*{religion} == 'Buddhism'" th:value="Buddhism">Buddhism</option>
+                        <option th:selected="*{religion} == 'Christianity'" th:value="Christianity">Christianity
+                        </option>
+                        <option th:selected="*{religion} == 'Other'" th:value="Other">Other</option>
+                    </select>
                 </div>
 
                 <div class="form-group">
@@ -74,38 +97,32 @@
                     <input class="form-control" id="address" placeholder="Enter therapist's address" required
                            th:field="*{address}" type="text">
                 </div>
-                <!-- Gender -->
+
                 <div class="form-group">
-                    <label for="gender">Select therapist's gender</label>
-                    <select class="form-control" id="gender" required th:field="*{gender}">
-                        <option th:value="male">Male</option>
-                        <option th:value="female">Female</option>
-                        <option th:value="other">Other</option>
+                    <label for="passwordForgetQuestionNo">Therapist's Password Forgetting Question</label>
+                    <select class="form-control" id="passwordForgetQuestionNo" required
+                            th:field="*{passwordForgetQuestionNo}">
+                        <option th:selected="*{passwordForgetQuestionNo} == '1'" th:value="1">Favourite
+                            Flower?
+                        </option>
+                        <option th:selected="*{passwordForgetQuestionNo} == '2'" th:value="2">Favourite
+                            Place?
+                        </option>
+                        <option th:selected="*{passwordForgetQuestionNo} == '3'" th:value="3">Favourite
+                            Movie Name?
+                        </option>
+                        <option th:selected="*{passwordForgetQuestionNo} == '4'" th:value="4">Hobby?
+                        </option>
+                        <option th:selected="*{passwordForgetQuestionNo} == '5'" th:value="5">Secret
+                            question.
+                        </option>
                     </select>
                 </div>
 
                 <div class="form-group">
-                    <label for="religion">Select therapist's religion</label>
-                    <select class="form-control" id="religion" required th:field="*{religion}">
-                        <option th:value="Muslim">Muslim</option>
-                        <option th:value="Hindu">Hindu</option>
-                        <option th:value="Buddhist">Buddhist</option>
-                        <option th:value="Christian">Christian</option>
-                        <option th:value="Christian">Other</option>
-                    </select>
-                </div>
-                <!-- Password & Confirm Password -->
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input class="form-control" id="password" pattern=".{6,}" placeholder="Enter password"
-                           required th:field="*{password}" type="password">
-                </div>
-                <div class="form-group">
-                    <!-- Confirm Password -->
-                    <label for="confirmPassword">Confirm Password</label>
-                    <input class="form-control" id="confirmPassword" pattern=".{6,}" placeholder="Confirm password"
-                           required type="password">
-                    <span class="text-danger" id="passwordError"></span>
+                    <label for="answer">Answer to therapist's password forgetting question</label>
+                    <input class="form-control" id="answer" placeholder="Enter your secret answer"
+                           required th:field="*{answer}" type="text">
                 </div>
                 <input th:field="*{id}" th:value="${therapistToUpdate.id}" type="hidden"/>
                 <button class="btn btn-primary" type="submit">Update</button>
@@ -127,12 +144,9 @@
 <div th:replace="fragments/footer :: footer"></div>
 
 <!-- Scripts -->
-<!-- Scripts -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.js" type="text/javascript"></script>
 <script>
     $(function () {
     $('[data-toggle="tooltip"]').tooltip()
