--- a/src/main/resources/templates/chatbots/chatbot-question-answer-add.html
+++ b/src/main/resources/templates/chatbots/chatbot-question-answer-add.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="fragments/common-header :: common-header"></div>
 
 <head>
     <title>Add New ChatBot Question Answer-MHSN</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -34,21 +36,44 @@
             </form>
         </div>
     </div>
-</main>
+    <!-- Bootstrap Toast for displaying error message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${error}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Error</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-danger text-white" th:text="${error}"></div>
+    </div>
 
+    <!-- Bootstrap Toast for displaying success message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
+         th:if="${success}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Success</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-success text-white" th:text="${success}"></div>
+    </div>
+</main>
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
+
 <!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.js" type="text/javascript"></script>
 <script>
-    $(function () {
-    $('[data-toggle="tooltip"]').tooltip()
-    })
+    $(document).ready(function () {
+        $('.toast').toast({
+            autohide: true,
+            delay: 5000 // 5 seconds
+        }).toast('show');
+    });
 </script>
-
-</body>
-</html>
