--- a/src/main/resources/templates/events/add-event.html
+++ b/src/main/resources/templates/events/add-event.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="fragments/common-header :: common-header"></div>
 
 <head>
     <title>Add New Event-MHSN</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -19,7 +21,7 @@
     <div class="container">
         <div class="pt-3">
             <h1>Add New Event</h1>
-            <form enctype="multipart/form-data" method="POST" th:action="@{/event-save}" th:object="${event}">
+            <form method="POST" th:action="@{/event-save}" th:object="${event}">
                 <div class="form-group">
                     <label for="title">Event Title:</label>
                     <input class="form-control" id="title" placeholder="Enter Event Title" required
@@ -65,41 +67,65 @@
                     <input class="form-control" id="chiefGuestDesignation" placeholder="Enter Chief Guest's Designation"
                            th:field="*{chiefGuestDesignation}" type="text">
                 </div>
-                <div class="form-group">
-                    <label for="banner">Banner:</label>
-                    <input accept="image/*" class="form-control-file" id="banner"
-                           name="banner" onchange="validateFileSize(this)" required type="file">
-                </div>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
         </div>
     </div>
-</main>
+    <!-- Bootstrap Toast for displaying error message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${error}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Error</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-danger text-white" th:text="${error}"></div>
+    </div>
 
+    <!-- Bootstrap Toast for displaying success message -->
+    <div aria-atomic="true" aria-live="assertive" class="toast"
+         role="alert" style="position: absolute; top: 0; right: 0; margin-top: 50px; margin-right: 30px;"
+         th:if="${success}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Success</strong>
+            <button aria-label="Close" class="ml-2 mb-1 close" data-dismiss="toast" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body bg-success text-white" th:text="${success}"></div>
+    </div>
+</main>
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
 
 <!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.js" type="text/javascript"></script>
 <script>
-    $(function () {
-    $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
+    $(document).ready(function () {
+        $('.toast').toast({
+            autohide: true,
+            delay: 5000 // 5 seconds
+        }).toast('show');
 
-<script>
-    function validateFileSize(input) {
-    const maxSize = 10 * 1024 * 1024; // 10MB
-    if (input.files.length > 0 && input.files[0].size > maxSize) {
-        alert('The file exceeds the maximum size of 10MB. Please choose a smaller file.');
-        input.value = ''; // Clear the file input
-    }
-}
+        function validateFileSize(input) {
+            const maxSize = 5 * 1024 * 1024; // 5MB
+            if (input.files.length > 0 && input.files[0].size > maxSize) {
+                alert('The file exceeds the maximum size of 10MB. Please choose a smaller file.');
+                input.value = ''; // Clear the file input
+            }
+        }
+
+        // Attach the validateFileSize function to the file input elements
+        $('input[type="file"]').on('change', function () {
+            validateFileSize(this);
+        });
+    });
 </script>
 </body>
 </html>
+
 
